--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,5 +1,4 @@
 NAME = philo
-LIBFT = $(LIB_DIR)/libft.a
 
 CC = gcc
 CFLAGS = -Wall -Werror -Wextra #-g -fsanitize=thread
@@ -7,7 +6,6 @@ CFLAGS = -Wall -Werror -Wextra #-g -fsanitize=thread
 SRC_DIR = src/
 OBJ_DIR = obj/
 INC_DIR = include/
-LIB_DIR = libft
 
 SRCS =	check.c \
 		initialize.c \
@@ -23,28 +21,24 @@ OBJ_PRE = $(addprefix $(OBJ_DIR), $(OBJS))
 DEP = philo.h
 DEP_PRE = $(addprefix $(INC_DIR), $(DEP))
 
-
-all: lib $(NAME)
+all: $(NAME)
 
 $(OBJ_DIR)%.o: %.c $(DEP_PRE)
 	mkdir -p $(OBJ_DIR)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(NAME): $(OBJ_PRE)
-	$(CC) $(CFLAGS) -o $@ $^ $(LIBFT) $(RLINE) $(LFLAGS)
+	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
 	rm -rf $(OBJ_DIR)
-	rm -rf $(RLINE)
-	make clean -C $(LIB_DIR)
 
 fclean: clean
 	rm -rf $(NAME)
-	make fclean -C $(LIB_DIR)
 
 lib: 
 	@make -C $(LIB_DIR)
 
 re: fclean all
 
-.PHONY: re debug fclean clean all run readline libfile
+.PHONY: re debug fclean clean all
