--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,7 +1,7 @@
 NAME = philo
 
 CC = gcc
-CFLAGS = -Wall -Werror -Wextra -g #-fsanitize=thread
+CFLAGS = -Wall -Werror -Wextra -g -fsanitize=thread
 
 SRC_DIR = src/
 OBJ_DIR = obj/
